SESION 7/CovianGomezDavid-S6L4/CovianGomezDavid-S6L4/planeSession7/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.12.jar;C:\Program Files\BlueJ\lib\junit-jupiter-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-api-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-engine-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-migrationsupport-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-params-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-commons-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-console-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-console-standalone-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-engine-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-launcher-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-reporting-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-runner-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-suite-api-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-testkit-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-quickcheck-core-0.9.jar;C:\Program Files\BlueJ\lib\junit-vintage-engine-5.5.2.jar;C:\Program Files\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files\BlueJ\lib\hamcrest-library-1.3.jar;C:\Program Files\BlueJ\lib\lang-stride.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.base.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.controls.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.media.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.properties.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.swing.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.web.jar;C:\Users\UO295168\Desktop\CovianGomezDavid-S6L4\CovianGomezDavid-S6L4\planeSession7
-d
C:\Users\UO295168\Desktop\CovianGomezDavid-S6L4\CovianGomezDavid-S6L4\planeSession7\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\UO295168\Desktop\CovianGomezDavid-S6L4\CovianGomezDavid-S6L4\planeSession7\WheelStrut.java
<---- end of javadoc command ---->
Loading source file C:\Users\UO295168\Desktop\CovianGomezDavid-S6L4\CovianGomezDavid-S6L4\planeSession7\WheelStrut.java...
C:\Users\UO295168\Desktop\CovianGomezDavid-S6L4\CovianGomezDavid-S6L4\planeSession7\WheelStrut.java:27: error: illegal start of type
    ??? WheelStrut()     {
    ^
C:\Users\UO295168\Desktop\CovianGomezDavid-S6L4\CovianGomezDavid-S6L4\planeSession7\WheelStrut.java:45: error: illegal start of type
    ??? ??? setRightWheel(Wheel wheel) {
    ^
C:\Users\UO295168\Desktop\CovianGomezDavid-S6L4\CovianGomezDavid-S6L4\planeSession7\WheelStrut.java:45: error: invalid method declaration; return type required
    ??? ??? setRightWheel(Wheel wheel) {
            ^
C:\Users\UO295168\Desktop\CovianGomezDavid-S6L4\CovianGomezDavid-S6L4\planeSession7\WheelStrut.java:51: error: illegal start of type
    ??? ??? setDeployed(boolean deployed)  {
    ^
C:\Users\UO295168\Desktop\CovianGomezDavid-S6L4\CovianGomezDavid-S6L4\planeSession7\WheelStrut.java:51: error: invalid method declaration; return type required
    ??? ??? setDeployed(boolean deployed)  {
            ^
C:\Users\UO295168\Desktop\CovianGomezDavid-S6L4\CovianGomezDavid-S6L4\planeSession7\WheelStrut.java:59: error: illegal start of type
    public ??? getLeftWheel(){
           ^
C:\Users\UO295168\Desktop\CovianGomezDavid-S6L4\CovianGomezDavid-S6L4\planeSession7\WheelStrut.java:59: error: invalid method declaration; return type required
    public ??? getLeftWheel(){
               ^
C:\Users\UO295168\Desktop\CovianGomezDavid-S6L4\CovianGomezDavid-S6L4\planeSession7\WheelStrut.java:67: error: illegal start of type
    ??? ??? getRightWheel(){
    ^
C:\Users\UO295168\Desktop\CovianGomezDavid-S6L4\CovianGomezDavid-S6L4\planeSession7\WheelStrut.java:67: error: invalid method declaration; return type required
    ??? ??? getRightWheel(){
            ^
C:\Users\UO295168\Desktop\CovianGomezDavid-S6L4\CovianGomezDavid-S6L4\planeSession7\WheelStrut.java:74: error: illegal start of type
     ??? ??? isDeployed(){ 
     ^
C:\Users\UO295168\Desktop\CovianGomezDavid-S6L4\CovianGomezDavid-S6L4\planeSession7\WheelStrut.java:74: error: invalid method declaration; return type required
     ??? ??? isDeployed(){ 
             ^
C:\Users\UO295168\Desktop\CovianGomezDavid-S6L4\CovianGomezDavid-S6L4\planeSession7\WheelStrut.java:84: error: illegal start of type
    ??? ??? test()   {
    ^
C:\Users\UO295168\Desktop\CovianGomezDavid-S6L4\CovianGomezDavid-S6L4\planeSession7\WheelStrut.java:84: error: invalid method declaration; return type required
    ??? ??? test()   {
            ^
C:\Users\UO295168\Desktop\CovianGomezDavid-S6L4\CovianGomezDavid-S6L4\planeSession7\WheelStrut.java:93: error: illegal start of type
     ??? ???  toString() {
     ^
C:\Users\UO295168\Desktop\CovianGomezDavid-S6L4\CovianGomezDavid-S6L4\planeSession7\WheelStrut.java:93: error: invalid method declaration; return type required
     ??? ???  toString() {
              ^
C:\Users\UO295168\Desktop\CovianGomezDavid-S6L4\CovianGomezDavid-S6L4\planeSession7\WheelStrut.java:114: error: illegal start of type
    ??? ??? print() {
    ^
C:\Users\UO295168\Desktop\CovianGomezDavid-S6L4\CovianGomezDavid-S6L4\planeSession7\WheelStrut.java:114: error: invalid method declaration; return type required
    ??? ??? print() {
            ^
C:\Users\UO295168\Desktop\CovianGomezDavid-S6L4\CovianGomezDavid-S6L4\planeSession7\WheelStrut.java:122: error: illegal start of type
    ??? ??? deploy()   {
    ^
C:\Users\UO295168\Desktop\CovianGomezDavid-S6L4\CovianGomezDavid-S6L4\planeSession7\WheelStrut.java:122: error: invalid method declaration; return type required
    ??? ??? deploy()   {
            ^
C:\Users\UO295168\Desktop\CovianGomezDavid-S6L4\CovianGomezDavid-S6L4\planeSession7\WheelStrut.java:129: error: illegal start of type
    ??? ??? retract()  {
    ^
C:\Users\UO295168\Desktop\CovianGomezDavid-S6L4\CovianGomezDavid-S6L4\planeSession7\WheelStrut.java:129: error: invalid method declaration; return type required
    ??? ??? retract()  {
            ^
21 errors
